[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"
python-dotenv = "^0.19.2"
youtube_dl = "^2021.12.17"
Flask = "^2.0.2"
google-api-helper = "^0.3.1"
geopy = "^2.2.0"
yfinance = "^0.1.70"
pandas = "^1.4.0"
plotly = "^5.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"